# bottlerocket-test-system

./: .dockerignore  .gitignore  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  Dockerfile.sdk_openssl  Makefile  README.md  clarify.toml  deny.toml
.github/workflows/: build.yaml  images.yaml  lint.yaml  rust.yaml  tools.yaml
agent/agent-common/: Cargo.toml
agent/agent-common/src/: lib.rs  secrets.rs
agent/builder-derive/: Cargo.toml
agent/builder-derive/src/: derive.rs  lib.rs
agent/builder-derive/tests/: derive.rs
agent/configuration-build-derive/: Cargo.toml
agent/configuration-derive/: Cargo.toml
agent/ec2-resource-agent/: Cargo.toml  Dockerfile
agent/ec2-resource-agent/src/: lib.rs  main.rs  provider.rs
agent/eks-resource-agent/: Cargo.toml  Dockerfile
agent/eks-resource-agent/src/: main.rs  provider.rs
agent/resource-agent/: Cargo.toml
agent/resource-agent/examples/duplicator_resource_agent/: Dockerfile  main.rs  provider.rs
agent/resource-agent/examples/example_resource_agent/: Dockerfile  main.rs  provider.rs
agent/resource-agent/src/: agent.rs  bootstrap.rs  error.rs  lib.rs
agent/resource-agent/src/clients/: agent_client.rs  error.rs  implementation.rs  info_client.rs  mod.rs
agent/resource-agent/src/provider/: error.rs  mod.rs
agent/resource-agent/tests/: mock_test.rs
agent/resource-agent/tests/mock/: agent_client.rs  info_client.rs  mod.rs
agent/sonobuoy-test-agent/: Cargo.toml  Dockerfile
agent/sonobuoy-test-agent/src/: lib.rs  main.rs
agent/test-agent/: Cargo.toml
agent/test-agent-cli/: Cargo.toml
agent/test-agent-cli/design/: RUNBOOK.md
agent/test-agent-cli/examples/example_test_agent_cli/: Dockerfile  example-test.sh
agent/test-agent-cli/src/: client.rs  error.rs  get_secret.rs  init.rs  main.rs  retry_count.rs  save_results.rs  send_results.rs  terminate.rs  test_error.rs
agent/test-agent-cli/tests/: cli_test.rs  data.rs
agent/test-agent-cli/tests/data/: deploy_test.yaml
agent/test-agent/examples/example_test_agent/: Dockerfile  main.rs
agent/test-agent/src/: agent.rs  bootstrap.rs  constants.rs  error.rs  k8s_bootstrap.rs  k8s_client.rs  lib.rs
agent/test-agent/tests/: mock.rs
agent/utils/: Cargo.toml
agent/utils/src/: aws.rs  constants.rs  error.rs  lib.rs  ssm.rs
bottlerocket-agents/: Cargo.toml
bottlerocket-agents/src/: error.rs  lib.rs  sonobuoy.rs
bottlerocket/agents/: Cargo.toml
bottlerocket/agents/src/: clusters.rs  constants.rs  error.rs  lib.rs  sonobuoy.rs  tuf.rs  userdata.rs  vsphere.rs  wireguard.rs  workload.rs
bottlerocket/samples/: Makefile.toml  RUNBOOK.md
bottlerocket/src/: lib.rs
bottlerocket/testsys/: Cargo.toml
bottlerocket/testsys/src/: add.rs  add_aws_secret.rs  add_secret_map.rs  delete.rs  error.rs  install.rs  k8s.rs  logs.rs  main.rs  restart_test.rs  results.rs  run_aws_ecs.rs  run_aws_k8s.rs  run_file.rs  run_sonobuoy.rs  run_vmware.rs  set.rs  status.rs  testsys_types.rs
bottlerocket/testsys/tests/: cli_test.rs
bottlerocket/testsys/tests/data/: example-resource-provider.yaml  integ-test-depended-on.yaml  integ-test-dependent.yaml  resource-destruction-never.yaml  resource-test.yaml  template-test.yaml
bottlerocket/types/: Cargo.toml
bottlerocket/types/src/: agent_config.rs  lib.rs
cli/: Cargo.toml
cli/src/: add_secret.rs  delete.rs  describe.rs  error.rs  install.rs  logs.rs  main.rs  restart.rs  restart_test.rs  results.rs  run.rs  run_file.rs  status.rs  uninstall.rs
cli/tests/: cli_test.rs  data.rs
cli/tests/data/: example-resource-provider.yaml  integ-test-depended-on.yaml  resource-test.yaml  template-test.yaml
client/: Cargo.toml
client/src/: lib.rs  resource_provider_client.rs  test_client.rs
client/src/model/: constants.rs  mod.rs  resource.rs  resource_provider.rs  test.rs
client/src/system/: controller.rs  mod.rs
controller/: Cargo.toml  Dockerfile
controller/src/: action.rs  constants.rs  context.rs  error.rs  main.rs  reconcile.rs  test_pod.rs  utils.rs
controller/src/job/: error.rs  job_builder.rs  mod.rs
controller/src/resource_controller/: action.rs  context.rs  mod.rs
controller/src/test_controller/: action.rs  context.rs  mod.rs  reconcile.rs
deploy/testsys-launcher/: .gitignore  README.md  cdk.json  go.mod  go.sum  testsys-launcher.go
design/: DESIGN.md  sequence-diagram.plantuml  testsys.drawio
docs/: DESIGN.md  DEVELOPER.md  IAMPERMISSIONS.md  QUICKSTART.md  README.md
docs/images/: testsys.drawio
hashes/: eksctl  kubernetes  sonobuoy
model/: Cargo.toml
model/src/: agent.rs  configuration.rs  constants.rs  crd_ext.rs  error.rs  lib.rs  resource.rs  schema_utils.rs  test.rs
model/src/clients/: crd_client.rs  error.rs  http_status_code.rs  mod.rs  resource_client.rs  resource_provider_client.rs  test_client.rs
model/src/model/: mod.rs  resource_provider.rs
model/src/system/: agent.rs  controller.rs  mod.rs  namespace.rs
model/src/test_manager/: delete.rs  error.rs  install.rs  manager.rs  manager_impl.rs  mod.rs  status.rs
selftest/: Cargo.toml
selftest/src/: cluster.rs  lib.rs  test_settings.rs
test-agent/: Cargo.toml
test-agent/src/: error.rs  k8s_bootstrap.rs  lib.rs
test-agent/tests/: mock.rs
test_agent/: Cargo.toml
test_agent/src/: agent.rs  lib.rs
test_agent/tests/: mock.rs
testsys/: Cargo.toml
testsys/src/: add.rs  add_file.rs  add_secret_map.rs  delete.rs  error.rs  install.rs  k8s.rs  main.rs  restart.rs  results.rs  run.rs  run_aws_ecs.rs  run_aws_k8s.rs  run_file.rs  run_sonobuoy.rs  run_vmware.rs  set.rs  status.rs
testsys/tests/: cli_test.rs  data.rs  sonobuoy_test.rs
testsys/tests/data/: example-resource-provider.yaml  hello-example.yaml  integ-test-depended-on.yaml  integ-test-dependent.yaml  resource-test.yaml  template-test.yaml
tools/: CHANGELOG.md  Dockerfile  README.md  clarify.toml  eksctl.clarify.toml
tools/hashes/: aws-iam-authenticator  eksctl  eksctl-anywhere  helm  kubernetes  sonobuoy
yamlgen/: Cargo.toml  build.rs
yamlgen/deploy/: testsys-agent.yaml  testsys-controller.yaml  (+2 more)
(+58 files in other folders)
