[workspace]
members = [
    "agent/agent-common",
    "agent/utils",
    "agent/resource-agent",
    "agent/test-agent",
    "agent/test-agent-cli",
    "agent/configuration-derive",
    "agent/builder-derive",
    "bottlerocket/agents",
    "cli",
    "bottlerocket/types",
    "controller",
    "model",
    "selftest",
]

resolver = "2"
