[package]
name = "client"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
kube = { version = "0.58", default-features = true, features = ["derive"] }
schemars = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
