[package]
name = "client"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.59.0", default-features = true, features = [ "derive"] }
log = "0.4"
maplit = "1.0.2"
schemars = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
