[package]
name = "controller"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
env_logger = "0.9"
futures = "0.3"
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.59.0", default-features = false, features = ["client", "derive", "rustls-tls"] }
kube-runtime = "0.59.0"
log = "0.4"
schemars = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# local dependencies
client = { path = "../client" }
# regenerate testsys.yaml if the model has changed
yamlgen = { path = "../yamlgen" }
