[package]
name = "controller"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
env_logger = "0.9"
futures = "0.3"
http = "0"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_20"] }
kube = { version = "0.71", default-features = true, features = ["derive"] }
kube-runtime = "0.70"
lazy_static = "1"
log = "0.4"
model = { path = "../model" }
parse_duration = "2.1"
schemars = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
yamlgen = { path = "../yamlgen" }
