[package]
name = "controller"
version = "0.0.6"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
env_logger = "0.10"
futures = "0.3"
http = "0"
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_24"] }
kube = { version = "0.82", default-features = false, features = ["derive", "client", "rustls-tls"] }
kube-runtime = "0.82"
lazy_static = "1"
log = "0.4"
testsys-model = { version = "0.0.6", path = "../model" }
schemars = "=0.8.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
