[package]
name = "model"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
async-recursion = "1"
async-trait = "0.1"
futures = "0.3"
http = "0"
json-patch = "0.2"
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_20"] }
kube = { version = "0.71", default-features = false, features = ["config", "derive", "jsonpatch", "client", "native-tls"] }
lazy_static = "1"
log = "0.4"
maplit = "1.0.2"
regex = "1"
schemars = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
snafu = "0.7"
tokio =  { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
selftest = { path = "../selftest" }
tokio = { version = "1", features = ["macros"] }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
