[package]
name = "model"
version = "0.0.5"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
async-recursion = "1"
async-trait = "0.1"
base64 = "0.20"
bytes = "1.3"
chrono = { version = "0.4", features = ["clock"]}
futures = "0.3"
http = "0.2"
json-patch = "0.2"
k8s-openapi = { version = "0.16", default-features = false, features = ["v1_20"] }
kube = { version = "0.75", default-features = false, features = ["config", "derive", "jsonpatch", "client", "native-tls", "ws"] }
lazy_static = "1"
log = "0.4"
maplit = "1.0.2"
regex = "1"
schemars = "=0.8.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
serde_yaml = "0.8"
snafu = "0.7"
tabled = "0.10"
tokio =  { version = "1", features = ["rt-multi-thread", "sync", "fs"] }
tokio-util = "0.7"
topological-sort = "0.2"

[dev-dependencies]
selftest = { version = "0.0.5", path = "../selftest" }
tokio = { version = "1", features = ["macros"] }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
