[package]
name = "selftest"
version = "0.0.2"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1"
envy = "0"
futures = "0.3.24"
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_20"] }
kube = { version = "0.75", default-features = true }
lazy_static = "1"
model = { version = "0.0.2", path = "../model"}
serde = "1"
tempfile = "3"
tokio = { version = "1", features = ["time"] }
