[package]
name = "selftest"
version = "0.0.8"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1"
envy = "0"
futures = "0.3"
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_24"] }
kube = { version = "0.82", default-features = false, features = ["client", "rustls-tls"] }
lazy_static = "1"
testsys-model = { version = "0.0.8", path = "../model"}
serde = "1"
tempfile = "3"
tokio = { version = "1", features = ["time"] }
