[package]
name = "test_agent"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
client = { path = "../client" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
tokio = { version = "1", default-features = false, features = [ "time" ] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [ "macros", "process" ] }
