[package]
name = "testsys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13.0"
env_logger = "0.9"
kube = { version = "0.64", default-features = true, features = ["config", "derive", "ws"] }
k8s-openapi = { version = "0", features = ["v1_20", "api"], default-features = false }
log = "0.4"
serde = "1.0.130"
serde_json = "1.0.61"
serde_yaml = "0.8"
snafu = "0.6"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.6.0"
futures = "0.3.8"

# local dependencies
model = { path = "../model" }
# regenerate testsys.yaml if the model has changed
yamlgen = { path = "../yamlgen" }
bottlerocket-agents = { path = "../bottlerocket-agents" }

[dev-dependencies]
assert_cmd = "2.0"
selftest = { path = "../selftest" }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
