[package]
name = "testsys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13.0"
bottlerocket-agents = { path = "../bottlerocket-agents" }
env_logger = "0.9"
futures = "0.3.8"
k8s-openapi = { version = "0", features = ["v1_20", "api"], default-features = false }
kube = { version = "0.64", default-features = true, features = ["config", "derive", "ws"] }
log = "0.4"
model = { path = "../model" }
serde = "1.0.130"
serde_json = "1.0.61"
serde_yaml = "0.8"
snafu = "0.6"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.6.0"

[dev-dependencies]
assert_cmd = "2.0"
selftest = { path = "../selftest" }

[build-dependencies]
yamlgen = { path = "../yamlgen" }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
