[package]
name = "agent-common"
version = "0.0.1"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
model = { version = "0.0.1", path = "../../model" }
snafu = "0.7"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
yamlgen = { version = "0.0.1", path = "../../yamlgen" }
