[package]
name = "builder-derive"
version = "0.0.8"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
serde = "1"

[lib]
proc-macro = true

[dev-dependencies]
serde = "1"
serde_json= "1"
testsys-model = { version = "0.0.8", path = "../../model" }
configuration-derive = { version = "0.0.8", path = "../configuration-derive" }
