[package]
name = "resource-agent"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
model = { path = "../../model" }
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
tokio = { version = "1", default-features = false, features = [ "time" ] }

[build-dependencies]
# regenerate testsys.yaml if the model has changed
yamlgen = { path = "../../yamlgen" }

[dev-dependencies]
env_logger = "0"
nonzero_ext = "0.3"
tokio = { version = "1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
