[package]
name = "test-agent-cli"
version = "0.0.9"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
argh = "0.1"
agent-common = { version = "0.0.9", path = "../agent-common" }
copy_dir = "0.1"
test-agent = { version = "0.0.9", path = "../test-agent" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
log = "0.4"
testsys-model = { version = "0.0.9", path = "../../model" }
snafu = "0.7"
serde_json = "1"
env_logger = "0.10"
serde_plain = "1"
serde = "1"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2"
selftest = { version = "0.0.9", path = "../../selftest" }
