[package]
name = "test-agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
async-trait = "0.1"
log = "0.4"
model = { path = "../../model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.6"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "process", "rt-multi-thread"] }

[build-dependencies]
yamlgen = { path = "../../yamlgen" }
