[package]
name = "test-agent"
version = "0.0.12"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
agent-common = { version = "0.0.12", path = "../agent-common" }
async-trait = "0.1"
log = "0.4"
testsys-model = { version = "0.0.12", path = "../../model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "process", "rt-multi-thread"] }
