[package]
name = "agent-utils"
version = "0.0.10"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
agent-common = { version = "0.0.10", path = "../../agent/agent-common" }
aws-config = "0.54"
aws-credential-types = "0.54"
aws-types = "0.54"
aws-sdk-iam = "0.24"
aws-sdk-ssm = "0.24"
aws-sdk-sts = "0.24"
aws-smithy-types = "0.54"
base64 = "0.20"
env_logger = "0.10"
log = "0.4"
testsys-model = { version = "0.0.10", path = "../../model" }
resource-agent = { version = "0.0.10", path = "../../agent/resource-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
test-agent = { version = "0.0.10", path = "../../agent/test-agent" }
