[package]
name = "bottlerocket-agents"
version = "0.0.2"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
agent-common = { version = "0.0.2", path = "../../agent/agent-common" }
agent-utils = { version = "0.0.2", path = "../../agent/utils" }
bottlerocket-types = { version = "0.0.2", path = "../types" }
async-trait = "0.1"
aws-config = "0.49"
aws-types = "0.49"
aws-sdk-ec2 = "0.19"
aws-sdk-ecs = "0.19"
aws-sdk-eks = "0.19"
aws-sdk-iam = "0.19"
aws-sdk-ssm = "0.19"
aws-sdk-sts = "0.19"
aws-smithy-types = "0.49"
base64 = "0.13.0"
env_logger = "0.9"
hex ="0.4.3"
k8s-openapi = { version = "0.16", default-features = false, features = ["v1_20"] }
kube = { version = "0.75", default-features = false, features = ["config", "derive", "client"] }
log = "0.4"
maplit = "1.0.2"
model = { version = "0.0.2", path = "../../model" }
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "blocking"] }
resource-agent = { version = "0.0.2", path = "../../agent/resource-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
sha2 = "0.10"
snafu = "0.7"
test-agent = { version = "0.0.2", path = "../../agent/test-agent" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tough = { version = "0.12", features = ["http"] }
url = "2.3"
uuid = { version = "1.2", default-features = false, features = ["serde", "v4"] }
