[package]
name = "testsys"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.13.0"
bottlerocket-types = { version = "0.1.0", path = "../types" }
env_logger = "0.9"
futures = "0.3.8"
http = "0"
k8s-openapi = { version = "0.15", features = ["v1_20", "api"], default-features = false }
kube = { version = "0.73", default-features = true, features = ["config", "derive", "ws"] }
log = "0.4"
maplit = "1"
model = { version = "0.1.0", path = "../../model" }
serde = "1.0.130"
serde_plain = "1"
serde_json = "1.0.61"
serde_yaml = "0.8"
snafu = "0.7"
structopt = "0.3"
tabled = "0.4"
termion = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.7"
topological-sort = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
selftest = { version = "0.1.0", path = "../../selftest" }

[build-dependencies]
yamlgen = { version = "0.1.0", path = "../../yamlgen" }

[features]
# The `integ` feature enables integration tests. These tests require docker and kind.
integ = []
