[package]
name = "bottlerocket-types"
version = "0.0.11"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
configuration-derive = { version = "0.0.11", path = "../../agent/configuration-derive" }
builder-derive = { version = "0.0.11", path = "../../agent/builder-derive" }
testsys-model = { version = "0.0.11", path = "../../model" }
serde = "1"
serde_plain = "1"
serde_yaml = "0.8"
serde_json = "1"
